--- a/css/main.css
+++ b/css/main.css
@@ -459,6 +459,11 @@ li.slick-active button {
   background-color:#40754d ;  
 }
 
+.info {
+height: 80%;
+
+
+}
 /*Detalhes*/
 #titulo h1{
   color: #ebebeb;
